--- a/pages/index/index_slider.html
+++ b/pages/index/index_slider.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="/fgb/libs/jssor.slider.min.js"></script>
-<script type="text/javascript" src="/fgb/js/sliders/index_slider.js"></script>
+<script type="text/javascript" src="libs/jssor.slider.min.js"></script>
+<script type="text/javascript" src="js/sliders/index_slider.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -15,7 +15,7 @@
     <div data-u="loading" class="jssorl-009-spin"
          style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:#fff;">
         <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;"
-             src="/fgb/img/icons/spin.svg"/>
+             src="img/icons/spin.svg"/>
     </div>
     <div id="index_slider_container_id" data-u="slides"
          style="cursor:default;position:relative;top:0px;left:0px;width:720px;height:480px;overflow:hidden;">
