--- a/pages/index/index_tournaments.html
+++ b/pages/index/index_tournaments.html
@@ -11,16 +11,16 @@
     <p>
       <small>
         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-        ${date}
+        ${short_description}
         <span class="glyphicon glyphicon-ok-circle ${is_finished}"
             style="float: right; font-size: 16px"
           aria-hidden="true"></span>
       </small>
       <br>
-      <a href="" class="color_fill ${type}" style="margin: 5px">
-        ${name}</a>
+      <a href="" class="color_fill ${decoration}" style="margin: 5px">
+        ${title}</a>
       <br>
-      <i>${city}</i>
+      <i>${place_name}</i>
     </p>
   </div>
 
