--- a/pages/index/index_news.html
+++ b/pages/index/index_news.html
@@ -21,7 +21,7 @@
             <p><small class="news_date">
               <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>${date}
             </small></p>
-            <p><a href="" class="news_title color_fill ${decoration}">${title}</a></p>
+            <p><a href="${ref}" class="news_title color_fill ${decoration}">${title}</a></p>
             <p class="news_text text-justify">${description}</p>
           </div>
         </div>
