--- a/pages/index/index_tournaments.html
+++ b/pages/index/index_tournaments.html
@@ -17,7 +17,7 @@
           aria-hidden="true"></span>
       </small>
       <br>
-      <a href="" class="color_fill ${decoration}" style="margin: 5px">
+      <a href="${ref}" class="color_fill ${decoration}" style="margin: 5px">
         ${title}</a>
       <br>
       <i>${place_name}</i>
