[Web] Final result of groups competitions

--- a/pages/world/eu_19_20_a.html
+++ b/pages/world/eu_19_20_a.html
@@ -642,7 +642,7 @@
                     Австрия
                 </td>
                 <td>2020.04.21</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -654,7 +654,7 @@
                     Польша
                 </td>
                 <td>2020.04.21</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -666,7 +666,7 @@
                     Израиль
                 </td>
                 <td>2020.04.21</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -678,7 +678,7 @@
                     Чехия
                 </td>
                 <td>2020.04.21</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -690,7 +690,7 @@
                     Венгрия
                 </td>
                 <td>2020.04.21</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             </tbody>
         </table>
@@ -721,7 +721,7 @@
                     Германия
                 </td>
                 <td>2020.05.12</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -733,7 +733,7 @@
                     Румыния
                 </td>
                 <td>2020.05.12</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -745,7 +745,7 @@
                     Украина
                 </td>
                 <td>2020.05.12</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -757,7 +757,7 @@
                     Россия
                 </td>
                 <td>2020.05.12</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -769,7 +769,7 @@
                     Франция
                 </td>
                 <td>2020.05.12</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             </tbody>
         </table>
