--- a/pages/world/eu_19_20_b.html
+++ b/pages/world/eu_19_20_b.html
@@ -717,7 +717,7 @@
             Финляндия
           </td>
           <td>2020.05.19</td>
-          <td></td>
+          <td>1&minus;3</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -729,7 +729,7 @@
             Швеция
           </td>
           <td>2020.05.19</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -741,7 +741,7 @@
             Бельгия
           </td>
           <td>2020.05.19</td>
-          <td></td>
+          <td>2&minus;2</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -753,7 +753,7 @@
             Италия
           </td>
           <td>2020.05.19</td>
-          <td></td>
+          <td>2&minus;2</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -765,7 +765,7 @@
             Сербия
           </td>
           <td>2020.05.19</td>
-          <td></td>
+          <td>1&minus;3</td>
         </tr>
         </tbody>
       </table>
