--- a/pages/world/eu_19_20_c.html
+++ b/pages/world/eu_19_20_c.html
@@ -421,7 +421,7 @@
                     Ирландия
                 </td>
                 <td>2020.03.31</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -433,7 +433,7 @@
                     Южная Африка
                 </td>
                 <td>2020.03.31</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -445,7 +445,7 @@
                     Словения
                 </td>
                 <td>2020.03.31</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -457,7 +457,7 @@
                     Словакия
                 </td>
                 <td>2020.03.31</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             </tbody>
         </table>
@@ -488,7 +488,7 @@
                     Греция
                 </td>
                 <td>2020.05.05</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -500,7 +500,7 @@
                     Хорватия
                 </td>
                 <td>2020.05.05</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -512,7 +512,7 @@
                     Дания
                 </td>
                 <td>2020.05.05</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -524,7 +524,7 @@
                     Норвегия
                 </td>
                 <td>2020.05.05</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             </tbody>
         </table>
