--- a/pages/world/eu_19_20_d.html
+++ b/pages/world/eu_19_20_d.html
@@ -556,7 +556,7 @@
                     Болгария
                 </td>
                 <td>2020.04.28</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -568,7 +568,7 @@
                     Кипр
                 </td>
                 <td>2020.04.28</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -580,7 +580,7 @@
                     Грузия
                 </td>
                 <td>2020.04.28</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -592,7 +592,7 @@
                     Казахстан
                 </td>
                 <td>2020.04.28</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             </tbody>
         </table>
@@ -623,7 +623,7 @@
                     Португалия
                 </td>
                 <td>2020.05.26</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -635,7 +635,7 @@
                     Беларусь
                 </td>
                 <td>2020.05.26</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -647,7 +647,7 @@
                     Испания
                 </td>
                 <td>2020.05.26</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -659,7 +659,7 @@
                     Исландия
                 </td>
                 <td>2020.05.26</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             </tbody>
         </table>
