[Web] Set EU 20-21 3th round

--- a/pages/world/eu_20_21_d.html
+++ b/pages/world/eu_20_21_d.html
@@ -154,7 +154,7 @@
                     Португалия
                 </td>
                 <td>2020.11.24</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -166,7 +166,7 @@
                     Кипр
                 </td>
                 <td>2020.11.24</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -178,7 +178,7 @@
                     Беларусь
                 </td>
                 <td>2020.11.24</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -190,7 +190,7 @@
                     Словения
                 </td>
                 <td>2020.11.24</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             </tbody>
         </table>
@@ -221,7 +221,7 @@
                     Болгария
                 </td>
                 <td>2020.12.15</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -233,7 +233,7 @@
                     Марокко
                 </td>
                 <td>2020.12.15</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -245,7 +245,7 @@
                     Грузия
                 </td>
                 <td>2020.12.15</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -257,7 +257,7 @@
                     Исландия
                 </td>
                 <td>2020.12.15</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             </tbody>
         </table>
