--- a/pages/world/eu_20_21_a.html
+++ b/pages/world/eu_20_21_a.html
@@ -168,7 +168,7 @@
                     Польша
                 </td>
                 <td>2020.11.10</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -180,7 +180,7 @@
                     Румыния
                 </td>
                 <td>2020.11.10</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -192,7 +192,7 @@
                     Украина
                 </td>
                 <td>2020.11.10</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -204,7 +204,7 @@
                     Чехия
                 </td>
                 <td>2020.11.10</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -216,7 +216,7 @@
                     Россия
                 </td>
                 <td>2020.11.10</td>
-                <td></td>
+                <td>2&minus;2</td>
             </tr>
             </tbody>
         </table>
@@ -247,7 +247,7 @@
                     Израиль
                 </td>
                 <td>2020.12.08</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -259,7 +259,7 @@
                     Франция
                 </td>
                 <td>2020.12.08</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -271,7 +271,7 @@
                     Сербия
                 </td>
                 <td>2020.12.08</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -283,7 +283,7 @@
                     Австрия
                 </td>
                 <td>2020.12.08</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -295,7 +295,7 @@
                     Венгрия
                 </td>
                 <td>2020.12.08</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             </tbody>
         </table>
