--- a/pages/world/eu_20_21_b.html
+++ b/pages/world/eu_20_21_b.html
@@ -164,7 +164,7 @@
             Великобритания
           </td>
           <td>2020.11.17</td>
-          <td></td>
+          <td>1&minus;3</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -176,7 +176,7 @@
             Бельгия
           </td>
           <td>2020.11.17</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -188,7 +188,7 @@
             Турция
           </td>
           <td>2020.11.17</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -200,7 +200,7 @@
             Финляндия
           </td>
           <td>2020.11.17</td>
-          <td></td>
+          <td>2&minus;2</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -212,7 +212,7 @@
             Германия
           </td>
           <td>2020.11.17</td>
-          <td></td>
+          <td>4&minus;0</td>
         </tr>
         </tbody>
       </table>
@@ -243,7 +243,7 @@
             Швеция
           </td>
           <td>2020.12.08</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -255,7 +255,7 @@
             Италия
           </td>
           <td>2020.12.08</td>
-          <td></td>
+          <td>0&minus;4</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -267,7 +267,7 @@
             Хорватия
           </td>
           <td>2020.12.08</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -279,7 +279,7 @@
             Нидерланды
           </td>
           <td>2020.12.08</td>
-          <td></td>
+          <td>0&minus;4</td>
         </tr>
         <tr>
           <td style="text-align:left">
@@ -291,7 +291,7 @@
             Швейцария
           </td>
           <td>2020.12.08</td>
-          <td></td>
+          <td>3&minus;1</td>
         </tr>
         </tbody>
       </table>
