--- a/pages/world/eu_20_21_c.html
+++ b/pages/world/eu_20_21_c.html
@@ -153,7 +153,7 @@
                     Дания
                 </td>
                 <td>2020.12.01</td>
-                <td></td>
+                <td>1&minus;3</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -165,7 +165,7 @@
                     Словакия
                 </td>
                 <td>2020.12.01</td>
-                <td></td>
+                <td>3&minus;1</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -177,7 +177,7 @@
                     Южная Африка
                 </td>
                 <td>2020.12.01</td>
-                <td></td>
+                <td>0&minus;4</td>
             </tr>
             <tr>
                 <td style="text-align:left">
@@ -189,7 +189,7 @@
                     Литва
                 </td>
                 <td>2020.12.01</td>
-                <td></td>
+                <td>4&minus;0</td>
             </tr>
             </tbody>
         </table>
